:pencil: add header

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/style.scss" />
-    <title>Document</title>
+    <title>Van-Life</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1 class="header__titre">La Van-Life</h1>
+      <p class="header__sousTitre">
+        Une façons différente de découvrir le monde
+      </p>
+    </header>
+  </body>
 </html>
