:building_construction: Adding MVC

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,8 @@
     <title>Van-Life</title>
   </head>
   <body>
-    <header>
-      <h1 class="header__titre">La Van-Life</h1>
-      <p class="header__sousTitre">
-        Une façons différente de découvrir le monde
-      </p>
-    </header>
+    <div class="container"></div>
+
+    <script type="text/javascript" src="js/MVC.js"></script>
   </body>
-  <script type="text/javascript" src="js/MVC.js"></script>
 </html>
