:wastebasket: deleting CKeditor

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
     <div class="container"></div>
 
     <script type="text/javascript" src="js/MVC.js"></script>
+    <script type="text/javascript" src="js/CKeditor.js"></script>
   </body>
 </html>
